# FreeJoyXConfiguratorQt

./: .editorconfig  .gitattributes  .gitignore  BETA_NOTES.md  CONTRIBUTING.md  FLASHING.md  InnoSetup-installerCreatorScript.iss  README.md  RUST_PORT_UI_STYLE.md  STYLE.md  THOUGHTS.md  UI_AUDIT_2026-06-06.md  UI_PATTERNS.md
.github/workflows/: configurator.yml  header-sync.yml  release.yml
ci/openssl-redist/: README.md
ci/wdk-redist/: README.md
docs/: RUST_SLINT_PORT_PLAN.md
fixtures/: f15e_ufc_upstream_1713.ini
src/: FreeJoyQt_de_DE.qm  FreeJoyQt_de_DE.ts  FreeJoyQt_ru.qm  FreeJoyQt_ru.ts  FreeJoyQt_zh_CN.qm  FreeJoyQt_zh_CN.ts  boarddisplay.h  common_defines.h  common_types.h  configtofile.cpp  configtofile.h  converter.cpp  deviceconfig.cpp  deviceconfig.h  devicesync.h  deviceversion.cpp  deviceversion.h  dfuse.rs  driver.rs  firmwareimage.cpp  firmwareimage.h  firmwarelibrary.cpp  firmwarelibrary.h  firmwareupdater.cpp  flashverdict.cpp  flashverdict.h  global.h  hiddevice.cpp  hiddevice.h  loadingoverlay.h  main.cpp  main.rs  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow_style.cpp  mousewheelguard.cpp  proto.rs  reportconverter.cpp  reportconverter.h  (+14 more)
src/dialogs/: busremapconfirmationdialog.cpp  busremapconfirmationdialog.h  busremapconfirmationdialog.ui  dfuinstalldialog.cpp  dfuinstalldialog.h  encodercalibratedialog.cpp  encodercalibratedialog.h  flashconfirmationdialog.cpp  flashconfirmationdialog.h  flashconfirmationdialog.ui  flashprogressdialog.cpp  flashprogressdialog.h  flashprogressdialog.ui  progresslog.h
src/flash/: devicetransitionwatcher.cpp  devicetransitionwatcher.h  dfuinstallsession.cpp  dfuinstallsession.h  flashsession.cpp  flashsession.h
src/legacy/: legacy_migrator.cpp  legacy_migrator.h  legacy_reverse_migrator.cpp  legacy_reverse_migrator.h  legacy_types.h  upstream_layout_check.cpp
src/linux/: 99-hid-FreeJoy.rules
src/styles/: common.qss  dark.qss  light.qss
src/widgets/: centered_cbox.cpp  debugwindow.cpp  debugwindow.h  debugwindow.ui  groupedcombo.cpp  groupedcombo.h  infolabel.cpp  selectfolder.cpp  selectfolder.ui  switchbutton.h
src/widgets/adv-settings/: advancedsettings.cpp  (+5 more)
tests/: test_boarddisplay.cpp  test_boarddisplay.pro  test_configload.pro  test_configload_main.cpp  test_configpersist.cpp  test_configpersist.pro  test_encoderpairing.cpp  test_encoderpairing.pro  test_encoderpersist.cpp  test_encoderpersist.pro  test_expandercs.cpp  test_expandercs.pro  test_flashsession.cpp  test_flashsession.pro  test_flashverdict.cpp  test_flashverdict.pro  test_hostbuttonnum.cpp  test_hostbuttonnum.pro  test_initconfig.cpp  test_initconfig.pro  test_legacymigrate.cpp  test_legacymigrate.pro  test_physref.cpp  test_physref.pro  test_pinconfig.cpp  test_pinconfig.pro  test_pinconfig_stubs.cpp  test_reordermath.cpp  test_reordermath.pro  test_shiftmigrate.cpp  test_shiftmigrate.pro  test_shiftregpins.cpp  test_shiftregpins.pro  test_tipformat.cpp  test_tipformat.pro
tools/freejoyx-dfu/: Cargo.toml  README.md
tools/freejoyx-dfu/src/: driver.rs  lib.rs  main.rs  proto.rs
(+94 files in other folders)
