# Standalone crate — it lives in the FreeJoyX (Qt) configurator repo but is
# built on its own by cargo (the Qt app shells out to the produced binary via
# QProcess; there is no in-process link). The empty [workspace] table below
# makes this its own workspace root so cargo never tries to attach it to a
# parent. Renamed from `freejoyx-flash` (which lived in the Rust configurator
# repo) when it moved in-house; no functional change.
[workspace]

[package]
name = "freejoyx-dfu"
version = "0.2.0"
edition = "2021"
rust-version = "1.85"
license = "GPL-3.0-only"
repository = "https://github.com/anpeaco/FreeJoyXConfiguratorQt"
authors = ["FreeJoyX contributors"]
description = "DfuSe install / reinstall helper for the STM32F411 over the ROM USB DFU bootloader (bundled with the FreeJoyX configurator)"

[[bin]]
name = "freejoyx-dfu"
path = "src/main.rs"

[lib]
name = "freejoyx_dfu"
path = "src/lib.rs"

[features]
# Off by default. Enables the Windows WinUSB auto-bind (libwdi / Zadig's
# engine: one UAC prompt, no certificate) via the `wdi` crate. The default
# build needs only `nusb` and compiles on any Windows/Linux/macOS host.
#
# Building WITH this feature additionally requires the "MSVC v143 ARM64 build
# tools" component, because libwdi-sys 0.1.4 always builds an ARM64 installer
# (no feature disables it). Without the feature the helper still flashes; the
# user binds WinUSB once with Zadig (see driver.rs open_failure_hint).
winusb-autobind = ["dep:wdi"]

[dependencies]
nusb = "0.1"

# Optional, Windows-only, behind the `winusb-autobind` feature (see above).
[target.'cfg(windows)'.dependencies]
wdi = { version = "0.1", default-features = false, features = ["enable-x86"], optional = true }
